tried to add stacked area chart, not successfull

--- a/index.html
+++ b/index.html
@@ -35,12 +35,8 @@
 			<div class="col-6" style="background: #9A8C98">
 				<div class="row justify-content-center" style="height: 100%">
 					<div class="align-self-center">
-						<p style="text-align: center">
-							useful links:<br>
-							<a href="https://coolors.co/22223b-4a4e69-9a8c98-c9ada7-f2e9e4">color palettes</a><br>
-							<a href="https://colorbrewer2.org/#type=sequential&scheme=BuGn&n=3">color brewer</a><br>
-							(add your own)
-						</p>
+                        <div id="areaChart"
+                        style="height: 100%; width:100%; border: thin solid grey; border-radius: 5px; background: rgba(64,64,64,0.4);"></div></div>
 					</div>
 				</div>
 			</div>
@@ -56,6 +52,8 @@
 	<script src="https://d3js.org/d3.v7.min.js"></script>
 
 	<!-- own js files -->
-	<script src="js/main.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/areaChartViz.js"></script>
+
 	</body>
 </html>
