--- a/index.html
+++ b/index.html
@@ -41,6 +41,23 @@
 				</div>
 			</div>
 		</div>
+		<div class="row" style="height: 70vh">
+			<div class="col" style="background: #FAF9F6">
+				<h2 style="margin: 2vh">Have Suggested Health Solutions Become Less Time Consuming?</h2>
+				<div id="groupedBarChart"></div>
+			</div>
+			<div class="col" style="background: #FAF9F6">
+				<div class="row justify-content-center" style="height: 100%">
+					<div class="align-self-center">
+						<ul>
+							<li style="color: orange">Less Than a Day</li>
+							<li style="color: blue">Between a Day and a Month</li>
+							<li style="color: green">A Month+</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="row" style="height: 7vh; background: #C9ADA7"></div>
 	</div>
 
@@ -54,6 +71,7 @@
 	<!-- own js files -->
     <script src="js/main.js"></script>
     <script src="js/areaChartViz.js"></script>
+	<script src="js/groupedBarChartViz.js"></script>
 
 	</body>
 </html>
