--- a/index.html
+++ b/index.html
@@ -33,20 +33,27 @@
                         style="height: 100%; width:100%; border: thin solid grey; border-radius: 5px; background: rgba(64,64,64,0.4);"></div></div>
 				        </div>
                     </div>
-				</div>
-            </div>
-            
+			</div>
 			<div class="col-6" style="background: #ffffff">
 				<div class="row justify-content-center" style="height: 100%">
+					<div class="row justify-content-center" style="height: 100%">
+						<div class="align-self-center">
+							<div id="areaChart"
+							style="height: 100%; width:100%; border: thin solid grey; border-radius: 5px; background: rgba(255, 255, 255, 0.4);">
+						</div>
+					</div>
+			</div>
+		</div>
+		<div class="row" style="height: 7vh; background: #C9ADA7">
+			<div class="row justify-content-center" style="height: 100%">
+				<div class="row justify-content-center" style="height: 100%">
 					<div class="align-self-center">
-                        <div id="areaChart"
-                        style="height: 100%; width:100%; border: thin solid grey; border-radius: 5px; background: rgba(255, 255, 255, 0.4);"></div></div>
+						<div id="heatMap"
+						style="height: 100%; width:100%; border: thin solid grey; border-radius: 5px; background: rgba(255, 255, 255, 0.4);">
 					</div>
 				</div>
-            </div>
-            
 		</div>
-		<div class="row" style="height: 7vh; background: #C9ADA7"></div>
+		</div>
 	</div>
 
 
@@ -59,7 +66,9 @@
 	<!-- own js files -->
     <script src="js/main.js"></script>
     <script src="js/areaChartViz.js"></script>
-    <script src="js/circleChartViz.js"></script>
+	<script src="js/circleChartViz.js"></script>
+	<script src="js/heatMapViz.js"></script>
+
 
 
 	</body>
