--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 				        </div>
                     </div>
 			</div>
+
 			<div class="col-6" style="background: #ffffff">
 				<div class="row justify-content-center" style="height: 100%">
 					<div class="row justify-content-center" style="height: 100%">
@@ -42,16 +43,41 @@
 							style="height: 100%; width:100%; border: thin solid grey; border-radius: 5px; background: rgba(255, 255, 255, 0.4);">
 						</div>
 					</div>
+				</div>
 			</div>
+
+			<div class="col-6" style="background: #ffffff">
+				<div class="row justify-content-center" style="height: 100%">
+					<div class="row justify-content-center" style="height: 100%">
+						<div class="align-self-center">
+							<div id="heatMap"
+							style="height: 100%; width:100%; border: thin solid grey; border-radius: 5px; background: rgba(255, 255, 255, 0.4);"></div>
+						</div>
+					</div>
+			</div>
+
+			<div class="col-6" style="background: #ffffff">
+				<div class="row justify-content-center" style="height: 100%">
+					<div class="row justify-content-center" style="height: 100%">
+						<div class="align-self-center">
+							<div id="heatMap"
+							style="height: 100%; width:100%; border: thin solid grey; border-radius: 5px; background: rgba(255, 255, 255, 0.4);"></div>
+						</div>
+					</div>
+			</div>
+
+			<div class="col-6" style="background: #ffffff">
+				<div class="row justify-content-center" style="height: 100%">
+					<div class="row justify-content-center" style="height: 100%">
+						<div class="align-self-center">
+							<div id="wordTree"
+							style="height: 100%; width:100%; border: thin solid grey; border-radius: 5px; background: rgba(255, 255, 255, 0.4);"></div>
+						</div>
+					</div>
+			</div>
+
 		</div>
 		<div class="row" style="height: 7vh; background: #C9ADA7">
-			<div class="row justify-content-center" style="height: 100%">
-				<div class="row justify-content-center" style="height: 100%">
-					<div class="align-self-center">
-						<div id="heatMap"
-						style="height: 100%; width:100%; border: thin solid grey; border-radius: 5px; background: rgba(255, 255, 255, 0.4);">
-					</div>
-				</div>
 		</div>
 		</div>
 	</div>
@@ -68,6 +94,8 @@
     <script src="js/areaChartViz.js"></script>
 	<script src="js/circleChartViz.js"></script>
 	<script src="js/heatMapViz.js"></script>
+	<script src="js/wordTreeViz.js"></script>
+
 
 
 
