--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
                                     <div class="col">
                                         <div class="row" style="height: 70vh; background: lightgrey; padding: 1vh">
                                             <div id="heatMap"
-                                                 style="overflow-y: scroll; height: 100%; width:100%; padding: 20px; border: thin solid grey; border-radius: 5px; background: rgba(64,64,64,0.4);">
-                                            </div>
-                                        </div>
+												 style="overflow-y: scroll; height: 100%; width:100%; padding: 20px; border: thin solid grey; border-radius: 5px; background: rgba(64,64,64,0.4);">
+												<button onClick = changeMap() >Click to change Heat Map</button>
+												</div>
+										</div>
                                     </div>
                                 </div>
 
@@ -73,6 +74,18 @@
                                                     <option value="relDeaths">Deaths (relative to population)</option>
                                                 </select> -->
                                                 <!-- TODO - DELETE THE LINES BELOW -->
+											</div>
+											
+										</div>
+									</div>
+
+								</div>
+								
+								<div class="carousel-item">
+                                    <div class="col">
+                                        <div class="row" style="height: 70vh; background: lightgrey; padding: 1vh">
+                                            <div id="wordTree"
+                                                 style="overflow-y: scroll; height: 100%; width:100%; padding: 20px; border: thin solid grey; border-radius: 5px; background: rgba(64,64,64,0.4);">
                                             </div>
                                         </div>
                                     </div>
@@ -96,7 +109,7 @@
                         </div>
                     </div>
 					</div>
-
+					With many of these visuals you may have to scroll down to see the updated viz (will fix in next version)
 				</div>
 			</div>
 		</div>
