--- a/index.html
+++ b/index.html
@@ -112,6 +112,48 @@
 					With many of these visuals you may have to scroll down to see the updated viz (will fix in next version)
 				</div>
 			</div>
+			<div id="trends">
+				<h1>Word and Phrase Trends Over Time</h1>
+				<div class="row" style="height: 70vh">
+					<div class="col" style="background: #FAF9F6">
+						<h2 style="margin: 2vh">Have Suggested Health Solutions Become Less Time Consuming?</h2>
+						<div id="groupedBarChart"></div>
+					</div>
+					<div class="col" style="background: #FAF9F6">
+						<div class="row justify-content-center" style="height: 100%">
+							<div class="align-self-center">
+								<ul>
+									<li style="color: orange">Less Than a Day</li>
+									<li style="color: blue">Between a Day and a Month</li>
+									<li style="color: green">A Month+</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row" style="background: #FAF9F6">
+					<div class="col">
+						<h2 style="margin: 2vh">Is Discussion of Mens Appearance and Attractiveness Centered Around Women?</h2>
+						<div id="lineChart"></div>
+					</div>
+					<div class="col justify-content-center" style="height: 100%">
+						<div class="align-self-center">
+							<p>Gendered Terms Focused on the Opposite Sex: </p>
+							<ul style="color: pink">
+								<li>Women/Woman</li>
+								<li>She/her</li>
+								<li>Lady/Ladies</li>
+							</ul>
+							<p>Terms Focused on Attractiveness and Appearance</p>
+							<ul style="color: blue">
+								<li>Sex/Sexy/Sexual</li>
+								<li>Hot</li>
+								<li>Handsome</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 
@@ -129,9 +171,8 @@
 	<script src="js/heatMapViz.js"></script>
 	<script src="js/wordTreeViz.js"></script>
 	<script src="js/brithdayViz.js"></script>
-
-
-
+	<script src="js/groupedBarChartViz.js"></script>
+	<script src="js/lineChartViz.js"></script>
 
 
 	</body>
